Fix troublesome overflow

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,7 +14,7 @@ hr {
 
 
 #main {
-  overflow:auto;
+  overflow: hidden;
   padding-bottom:100px; /* this needs to be bigger than footer height*/
 }
 
